Choose mode screen + polishing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Открыточный Битмейкер</title>
+    <title>Открыточный битмейкер</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="./icon/192x192.png">
     <script src="./js/index.js"></script>
@@ -20,10 +20,10 @@
         </div>
 
         <div class="fb">
-            <button class="fbrows fbrow1">
+            <button class="tbstyle fbrow1">
                 <h1>открыточный</h1>
             </button>
-            <button class="fbrows fbrow2">
+            <button class="tbstyle fbrow2">
                 <h1>битмейкер</h1>
             </button>
         </div>
