Links between pages + polishing

--- a/selectmode.html
+++ b/selectmode.html
@@ -26,7 +26,7 @@
     <section class="overlay">
 
         <div class="o1">
-            <div class="sb">
+            <div class="sb" onclick="window.location.href='beatmaker.html'">
                 <button class="tbstyle sbrow11">
                     <h1>1</h1>
                 </button>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="o2">
-            <div class="sb">
+            <div class="sb" onclick="window.location.href='cardeditor.html'">
                 <button class="tbstyle sbrow21">
                     <h1>2</h1>
                 </button>
