--- a/cardeditor.html
+++ b/cardeditor.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Битмейкер</title>
+    <title>Редактор открыток</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="./icon/192x192.png">
     <script src="./js/index.js"></script>
 </head>
 
 <body>
-    <p>битмейкер</p>
+    <p>редатор</p>
 </body>
 
 </html>
