--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
     <section class="first">
 
-        <div class="fbkg">
-            <div class="fbkgm"><img src="./img/m1o.svg" class="fm"></div>
-            <div class="fbkgm"><img src="./img/m2g.svg" class="fm"></div>
-            <div class="fbkgm"><img src="./img/m3p.svg" class="fm"></div>
-        </div>
+        <div class="fbkgm"><img src="./img/m1o.svg" class="fm"></div>
+        <div class="fbkgm"><img src="./img/m2g.svg" class="fm"></div>
+        <div class="fbkgm"><img src="./img/m3p.svg" class="fm"></div>
 
-        <div class="fb">
+        <div class="fb" onclick="window.location.href='selectmode.html'">
             <button class="tbstyle fbrow1">
                 <h1>открыточный</h1>
             </button>
