Basic HTML layout of the beatmaker screen

--- a/beatmaker.html
+++ b/beatmaker.html
@@ -11,7 +11,169 @@
 </head>
 
 <body>
-    <p>битмейкер</p>
+    <section class="beatmaker">
+        <div class="beat">
+
+            <div class="br" id="r1">
+                <button class="tr"></button>
+                <div class="tsg" id="tsr1g1">
+                    <button class="ts" id="tsr1g1b1"></button>
+                    <button class="ts" id="tsr1g1b2"></button>
+                    <button class="ts" id="tsr1g1b3"></button>
+                    <button class="ts" id="tsr1g1b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr1g2">
+                    <button class="ts" id="tsr1g2b1"></button>
+                    <button class="ts" id="tsr1g2b2"></button>
+                    <button class="ts" id="tsr1g2b3"></button>
+                    <button class="ts" id="tsr1g2b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr1g3">
+                    <button class="ts" id="tsr1g3b1"></button>
+                    <button class="ts" id="tsr1g3b2"></button>
+                    <button class="ts" id="tsr1g3b3"></button>
+                    <button class="ts" id="tsr1g3b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr1g4">
+                    <button class="ts" id="tsr1g4b1"></button>
+                    <button class="ts" id="tsr1g4b2"></button>
+                    <button class="ts" id="tsr1g4b3"></button>
+                    <button class="ts" id="tsr1g4b4"></button>
+                </div>
+            </div>
+
+            <div class="br" id="r2">
+                <button class="tr"></button>
+                <div class="tsg" id="tsr2g1">
+                    <button class="ts" id="tsr2g1b1"></button>
+                    <button class="ts" id="tsr2g1b2"></button>
+                    <button class="ts" id="tsr2g1b3"></button>
+                    <button class="ts" id="tsr2g1b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr2g2">
+                    <button class="ts" id="tsr2g2b1"></button>
+                    <button class="ts" id="tsr2g2b2"></button>
+                    <button class="ts" id="tsr2g2b3"></button>
+                    <button class="ts" id="tsr2g2b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr2g3">
+                    <button class="ts" id="tsr2g3b1"></button>
+                    <button class="ts" id="tsr2g3b2"></button>
+                    <button class="ts" id="tsr2g3b3"></button>
+                    <button class="ts" id="tsr2g3b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr2g4">
+                    <button class="ts" id="tsr2g4b1"></button>
+                    <button class="ts" id="tsr2g4b2"></button>
+                    <button class="ts" id="tsr2g4b3"></button>
+                    <button class="ts" id="tsr2g4b4"></button>
+                </div>
+            </div>
+
+            <div class="br" id="r3">
+                <button class="tr"></button>
+                <div class="tsg" id="tsr3g1">
+                    <button class="ts" id="tsr3g1b1"></button>
+                    <button class="ts" id="tsr3g1b2"></button>
+                    <button class="ts" id="tsr3g1b3"></button>
+                    <button class="ts" id="tsr3g1b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr3g2">
+                    <button class="ts" id="tsr3g2b1"></button>
+                    <button class="ts" id="tsr3g2b2"></button>
+                    <button class="ts" id="tsr3g2b3"></button>
+                    <button class="ts" id="tsr3g2b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr3g3">
+                    <button class="ts" id="tsr3g3b1"></button>
+                    <button class="ts" id="tsr3g3b2"></button>
+                    <button class="ts" id="tsr3g3b3"></button>
+                    <button class="ts" id="tsr3g3b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr3g4">
+                    <button class="ts" id="tsr3g4b1"></button>
+                    <button class="ts" id="tsr3g4b2"></button>
+                    <button class="ts" id="tsr3g4b3"></button>
+                    <button class="ts" id="tsr3g4b4"></button>
+                </div>
+            </div>
+
+            <div class="br" id="r4">
+                <button class="tr"></button>
+                <div class="tsg" id="tsr4g1">
+                    <button class="ts" id="tsr4g1b1"></button>
+                    <button class="ts" id="tsr4g1b2"></button>
+                    <button class="ts" id="tsr4g1b3"></button>
+                    <button class="ts" id="tsr4g1b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr4g2">
+                    <button class="ts" id="tsr4g2b1"></button>
+                    <button class="ts" id="tsr4g2b2"></button>
+                    <button class="ts" id="tsr4g2b3"></button>
+                    <button class="ts" id="tsr4g2b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr4g3">
+                    <button class="ts" id="tsr4g3b1"></button>
+                    <button class="ts" id="tsr4g3b2"></button>
+                    <button class="ts" id="tsr4g3b3"></button>
+                    <button class="ts" id="tsr4g3b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr4g4">
+                    <button class="ts" id="tsr4g4b1"></button>
+                    <button class="ts" id="tsr4g4b2"></button>
+                    <button class="ts" id="tsr4g4b3"></button>
+                    <button class="ts" id="tsr4g4b4"></button>
+                </div>
+            </div>
+
+            <div class="br" id="r5">
+                <button class="tr"></button>
+                <div class="tsg" id="tsr5g1">
+                    <button class="ts" id="tsr5g1b1"></button>
+                    <button class="ts" id="tsr5g1b2"></button>
+                    <button class="ts" id="tsr5g1b3"></button>
+                    <button class="ts" id="tsr5g1b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr5g2">
+                    <button class="ts" id="tsr5g2b1"></button>
+                    <button class="ts" id="tsr5g2b2"></button>
+                    <button class="ts" id="tsr5g2b3"></button>
+                    <button class="ts" id="tsr5g2b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr5g3">
+                    <button class="ts" id="tsr5g3b1"></button>
+                    <button class="ts" id="tsr5g3b2"></button>
+                    <button class="ts" id="tsr5g3b3"></button>
+                    <button class="ts" id="tsr5g3b4"></button>
+                </div>
+
+                <div class="tsg" id="tsr5g4">
+                    <button class="ts" id="tsr5g4b1"></button>
+                    <button class="ts" id="tsr5g4b2"></button>
+                    <button class="ts" id="tsr5g4b3"></button>
+                    <button class="ts" id="tsr5g4b4"></button>
+                </div>
+            </div>
+
+        </div>
+        <div class="samples">
+
+        </div>
+    </section>
 </body>
 
 </html>
