Beatmaker rows and buttons layout

--- a/beatmaker.html
+++ b/beatmaker.html
@@ -14,7 +14,7 @@
     <section class="beatmaker">
         <div class="beat">
 
-            <div class="br" id="r1">
+            <div class="br r1">
                 <button class="tr"></button>
                 <div class="tsg" id="tsr1g1">
                     <button class="ts" id="tsr1g1b1"></button>
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="br" id="r2">
+            <div class="br r2">
                 <button class="tr"></button>
                 <div class="tsg" id="tsr2g1">
                     <button class="ts" id="tsr2g1b1"></button>
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="br" id="r3">
+            <div class="br r3">
                 <button class="tr"></button>
                 <div class="tsg" id="tsr3g1">
                     <button class="ts" id="tsr3g1b1"></button>
@@ -107,7 +107,7 @@
                 </div>
             </div>
 
-            <div class="br" id="r4">
+            <div class="br r4">
                 <button class="tr"></button>
                 <div class="tsg" id="tsr4g1">
                     <button class="ts" id="tsr4g1b1"></button>
@@ -138,7 +138,7 @@
                 </div>
             </div>
 
-            <div class="br" id="r5">
+            <div class="br r5">
                 <button class="tr"></button>
                 <div class="tsg" id="tsr5g1">
                     <button class="ts" id="tsr5g1b1"></button>
@@ -170,9 +170,14 @@
             </div>
 
         </div>
-        <div class="samples">
 
+        <div class="samples">
         </div>
+
+        <button class="buttons back" id="back" onclick="window.location.href='selectmode.html'">
+            <h1>←</h1>
+        </button>
+
     </section>
 </body>
 
