Working on the beatmaker screen, layout of samples images

--- a/beatmaker.html
+++ b/beatmaker.html
@@ -172,6 +172,11 @@
         </div>
 
         <div class="samples">
+            <img src="./img/balloon.png" id="balloonimg">
+            <img src="./img/ball.png" id="ballimg">
+            <img src="./img/bell.png" id="bellimg">
+            <img src="./img/ruler.png" id="rulerimg">
+            <img src="./img/banana.png" id="bananaimg">
         </div>
 
         <button class="buttons back" id="back" onclick="window.location.href='selectmode.html'">
