Some metrics changes in the samples div

--- a/beatmaker.html
+++ b/beatmaker.html
@@ -7,7 +7,6 @@
     <title>Битмейкер</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="./icon/192x192.png">
-    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -179,11 +178,13 @@
             <img src="./img/banana.png" id="bananaimg">
         </div>
 
-        <button class="buttons back" id="back" onclick="window.location.href='selectmode.html'">
+        <button class="buttons back" onclick="window.location.href='selectmode.html'">
             <h1>←</h1>
         </button>
 
     </section>
+    <script type="" src="./js/beatmaker.js"></script>
+
 </body>
 
 </html>
