--- a/cardeditor.html
+++ b/cardeditor.html
@@ -4,14 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Редактор открыток</title>
+    <title>Битмейкер</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="./icon/192x192.png">
-    <script src="./js/index.js"></script>
 </head>
 
 <body>
-    <p>редатор</p>
+
+    <section class="cardeditor">
+
+        <div class="card">
+        </div>
+
+        <div class="editor">
+        </div>
+
+        <button class="buttons card-back" onclick="window.location.href='selectmode.html'">
+            <h1>←</h1>
+        </button>
+
+    </section>
+
 </body>
 
 </html>
