Finished HTML + CSS of the beatmaker screen

--- a/beatmaker.html
+++ b/beatmaker.html
@@ -171,11 +171,30 @@
         </div>
 
         <div class="samples">
-            <img src="./img/balloon.png" id="balloonimg">
-            <img src="./img/ball.png" id="ballimg">
-            <img src="./img/bell.png" id="bellimg">
-            <img src="./img/ruler.png" id="rulerimg">
-            <img src="./img/banana.png" id="bananaimg">
+            <div class="samples-balloon">
+                <img src="./img/balloon.png" id="balloonimg">
+                <button class="sample-indicator si-balloon"></button>
+            </div>
+
+            <div class="samples-ball">
+                <img src="./img/ball.png" id="ballimg">
+                <button class="sample-indicator si-ball"></button>
+            </div>
+
+            <div class="samples-bell">
+                <img src="./img/bell.png" id="bellimg">
+                <button class="sample-indicator si-bell"></button>
+            </div>
+
+            <div class="samples-ruler">
+                <img src="./img/ruler.png" id="rulerimg">
+                <button class="sample-indicator si-ruler"></button>
+            </div>
+
+            <div class="samples-banana">
+                <img src="./img/banana.png" id="bananaimg">
+                <button class="sample-indicator si-banana"></button>
+            </div>
         </div>
 
         <button class="buttons back" onclick="window.location.href='selectmode.html'">
