Colors panel in the card editor

--- a/cardeditor.html
+++ b/cardeditor.html
@@ -17,6 +17,34 @@
         </div>
 
         <div class="editor">
+
+            <div class="editor-shapes">
+                <img src="./img/m-vec1.svg" class="m-shapes msv">
+                <img src="./img/m-vec2.svg" class="m-shapes msv">
+                <img src="./img/m-vec3.svg" class="m-shapes msv">
+                <div class="es-horizontal">
+                    <img src="./img/m-vec4.svg" class="m-shapes msh">
+                    <img src="./img/m-vec5.svg" class="m-shapes msh">
+                </div>
+            </div>
+
+            <div class="editor-slider"></div>
+
+            <div class="editor-coloring">
+                <div class="coloring-colors">
+                    <div class="ec-col" id="ec-red"></div>
+                    <div class="ec-col" id="ec-orange"></div>
+                    <div class="ec-col" id="ec-yellow"></div>
+                    <div class="ec-col" id="ec-pink"></div>
+                    <div class="ec-col" id="ec-blue"></div>
+                    <div class="ec-col" id="ec-green"></div>
+                </div>
+                <div class="coloring-mix">
+                    <div class="cm-normal"><img src="./img/normal.svg" class="svgnormal"></div>
+                    <div class="cm-multiply"><img src="./img/multiply.svg" class="svgmultiply"></div>
+                </div>
+            </div>
+
         </div>
 
         <button class="buttons card-back" onclick="window.location.href='selectmode.html'">
