Polishing of the beatmaker screen + M shapes & range slider in card editor screen

--- a/cardeditor.html
+++ b/cardeditor.html
@@ -28,7 +28,9 @@
                 </div>
             </div>
 
-            <div class="editor-slider"></div>
+            <div class="slider">
+                <input type="range" min="1" max="100" value="50" class="slider">
+            </div>
 
             <div class="editor-coloring">
                 <div class="coloring-colors">
