--- a/beatmaker.html
+++ b/beatmaker.html
@@ -198,7 +198,7 @@
         </div>
 
         <button class="buttons back" onclick="window.location.href='selectmode.html'">
-            <h1>←</h1>
+            <img src="./img/back-arrow.svg" class="back-arrow-svg">
         </button>
 
     </section>
