--- a/cardeditor.html
+++ b/cardeditor.html
@@ -50,7 +50,7 @@
         </div>
 
         <button class="buttons card-back" onclick="window.location.href='selectmode.html'">
-            <h1>←</h1>
+            <img src="./img/back-arrow.svg" class="back-arrow-svg">
         </button>
 
     </section>
