--- a/cardeditor.html
+++ b/cardeditor.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="slider">
+            <div class="editor-slider">
                 <input type="range" min="1" max="100" value="50" class="slider">
             </div>
 
@@ -50,9 +50,18 @@
         </div>
 
         <button class="buttons card-back" onclick="window.location.href='selectmode.html'">
-            <img src="./img/back-arrow.svg" class="back-arrow-svg">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 70" fill="none">
+                <path d="M84 35L2.5 35M2.5 35L35.5 68M2.5 35L35.5 2" width="100%" height="100%" stroke="black"
+                    stroke-width="5px" stroke-linejoin="round" />
+            </svg>
         </button>
 
+        <button class="buttons card-done" onclick="window.location.href='final.html'">
+            <svg class="back-arrow-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 70" fill="none">
+                <path d="M2 27.1915L41.2583 66L106 2" width="100%" height="100%" stroke="black" stroke-width="6px"
+                    stroke-linejoin="round" />
+            </svg>
+        </button>
     </section>
 
 </body>
