--- a/final.html
+++ b/final.html
@@ -24,15 +24,17 @@
             </svg>
         </button>
 
-        <button class="buttons done-sound" onclick="window.location.href='cardeditor.html'">
-            <img src="./img/sound-on.svg" class="done-svg">
-        </button>
+        <div class="done-rightbuttons">
+            <button class="buttons done-sound" onclick="window.location.href='cardeditor.html'">
+                <img src="./img/sound-on.svg" class="done-svg">
+            </button>
 
-        <button class="buttons done-play" onclick="window.location.href='cardeditor.html'">
-            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 75 87" fill="none">
-                <path d="M69.5 44L3 5V82L69.5 44Z" stroke="black" stroke-width="5px" />
-            </svg>
-        </button>
+            <button class="buttons done-play" onclick="window.location.href='cardeditor.html'">
+                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 75 87" fill="none">
+                    <path d="M69.5 44L3 5V82L69.5 44Z" stroke="black" stroke-width="5px" />
+                </svg>
+            </button>
+        </div>
     </section>
 
 </body>
