--- a/beatmaker.html
+++ b/beatmaker.html
@@ -11,6 +11,7 @@
 
 <body>
     <section class="beatmaker">
+
         <div class="beat">
 
             <div class="br r1">
@@ -209,6 +210,13 @@
 
         <button class="buttons back" onclick="window.location.href='selectmode.html'">
             <img src="./img/back-arrow.svg" class="back-arrow-svg">
+        </button>
+
+        <button class="buttons done" onclick="window.location.href='final.html'">
+            <svg class="back-arrow-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 70" fill="none">
+                <path d="M2 27.1915L41.2583 66L106 2" width="100%" height="100%" stroke="black" stroke-width="6px"
+                    stroke-linejoin="round" />
+            </svg>
         </button>
 
     </section>
